# validbr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish-crate.yml  rust.yml
src/: append.rs  cnpj.rs  cpf.rs  lib.rs  macros.rs  rg.rs
