[package]
name = "validbr"
version = "0.1.0"
authors = ["oblitersofware", "JonathanxD <jhrldev@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Provides data structure and validation for Brazilian Registries, such as CPF, CNPJ and CNH (currently only CPF and CNPJ is supported)"
homepage = "https://github.com/oblitersoftware/validbr"
repository = "https://github.com/oblitersoftware/validbr"
readme = "README.md"
keywords = ["validation", "brazil", "cpf", "cnpj"]
categories = ["data-structures", "internationalization", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
complete = ["serde", "rand"]

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
serde = { version = "1.0.118", features = ["derive"], optional = true}
rand = { version = "0.8.0", optional = true}

